--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<html lang="en-us"><head><title>Shape Collision</title></head><body> <canvas id="canvas" width="800" height="800"></canvas> <script src="https://github.com/stovoy/shape-collisions/app.3c5e7d18.js"></script> </body></html>
+<html lang="en-us"><head><title>Shape Collision</title></head><body> <canvas id="canvas" width="800" height="800"></canvas> <script src="https://stovoy.github.io/shape-collisions/app.3c5e7d18.js"></script> </body></html>
